# mqtt-ingestor

./: .dockerignore  .env  .env.local  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  dump.yaml  pyproject.toml  taskfile.yaml
.github/workflows/: release.yaml
config/mosquitto/: mosquitto.conf
src/mqtt_ingestor/: api.py  logger.py  mqtt.py  settings.py
src/mqtt_ingestor/storage/: jsonl.py  noop.py  postgres.py  sqlalchemy.py
tests/: conftest.py  test_api.py  test_filter.py  test_jsonl_storage.py  test_model.py  test_mqtt.py  test_noop_storage.py  test_settings.py
